<?xml version="1.0" encoding="utf-8"?>
<!-- This Layout XML file is used for the image popup in the editing screen -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/border"
    android:orientation="vertical">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:background="#00FF0000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/dataSetText"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextView4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:gravity="center_horizontal"
            android:hint="@string/nameText"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:inputType="text"/>

        <Button
            android:id="@+id/imgButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importText"
            android:backgroundTint="@drawable/button_colors_tint"
            android:textColor="#DCE5F2"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/quitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quitButtonText"
                android:backgroundTint="@drawable/button_colors_tint"
                android:textColor="#DCE5F2"/>

            <Button
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/okButtonText"
                android:backgroundTint="@drawable/button_colors_tint"
                android:textColor="#DCE5F2"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/extButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importDataText"
            android:backgroundTint="@drawable/button_colors_tint"
            android:textColor="#DCE5F2"/>

    </LinearLayout>


</LinearLayout>