<?xml version="1.0" encoding="utf-8"?>
<!-- This Layout XML file is used for the Main Menu -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCE5F2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/infoImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/infoImageDesc"
            app:srcCompat="@drawable/ic_baseline_info_24px" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/editImageDesc"
                app:srcCompat="@drawable/ic_baseline_create_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/editImageText"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/learnImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/learnImageDesc"
                app:srcCompat="@drawable/ic_baseline_play_circle_outline_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/learnImageText"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/recentText"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recentsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#85A3A8"
        android:padding="4dp"
        android:scrollbars="vertical" />


</LinearLayout>