<?xml version="1.0" encoding="utf-8"?>
<!-- This Layout XML file is used for the Answer Mode (LearnActivityAnswer) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DCE5F2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

    <ImageView
        android:id="@+id/aImgLearn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imgView1Desc"
        android:clickable="true"
        android:focusable="true" />

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:divider="?android:dividerHorizontal"
            android:dividerPadding="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/aLoadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loadButtonText"
                android:background="@drawable/button_colors"
                android:textColor="#DCE5F2"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/aStartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startButtonText"
                android:background="@drawable/button_colors"
                android:textColor="#DCE5F2"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/aQuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quitButtonText"
                android:background="@drawable/button_colors"
                android:textColor="#DCE5F2"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/aAnswerView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:hint="@string/answerText"
                android:inputType="text"
                android:textSize="30sp"
                android:textStyle="bold"
                android:maxLines="1"/>

            <Button
                android:id="@+id/aCheckButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/checkButtonText"
                android:backgroundTint="@drawable/button_colors_tint"
                android:textColor="#DCE5F2"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/aScoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/scoreText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>