<?xml version="1.0" encoding="utf-8"?>
<!-- This Layout XML file is used for the mode popup in which the learning mode is picked -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/border"
    android:orientation="vertical">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:background="#00FF0000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/modeText"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mode_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pointingButtonText"
            android:backgroundTint="@drawable/button_colors_tint"
            android:textColor="#DCE5F2"/>

        <Button
            android:id="@+id/mode_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answerButtonText"
            android:backgroundTint="@drawable/button_colors_tint"
            android:textColor="#DCE5F2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/closeButtonText"
            android:backgroundTint="@drawable/button_colors_tint"
            android:textColor="#DCE5F2"/>




    </LinearLayout>



</LinearLayout>