<?xml version="1.0" encoding="utf-8"?>
<!-- This Layout XML file is used for the Pointing Mode (LearnActivity) -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DCE5F2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

    <ImageView
        android:id="@+id/imgLearn"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imgView1Desc"/>

        <RelativeLayout
            android:id="@+id/relLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:divider="?android:dividerHorizontal"
            android:dividerPadding="8dp">

            <Button
                android:id="@+id/loadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loadButtonText"
                android:background="@drawable/button_colors"
                android:textColor="#DCE5F2"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startButtonText"
                android:background="@drawable/button_colors"
                android:textColor="#DCE5F2"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/quitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quitButtonText"
                android:background="@drawable/button_colors"
                android:textColor="#DCE5F2"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/questionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/questionText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/scoreText" />

    </LinearLayout>

</LinearLayout>