<?xml version="1.0" encoding="utf-8"?>
<!-- This Layout XML file is used for the layout of a list item in the RecentsRecycler -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:backgroundTint="#DCE5F2"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/fileText"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/dateText"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/textView_dateHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastUsedText"
                android:textColor="#282A40"
                android:textSize="12sp"
                android:textStyle="bold"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_score"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/scoreText"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/textView_scoreHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastScoresText"
                android:textColor="#282A40"
                android:textSize="12sp"
                android:textStyle="bold"
                android:maxLines="1"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/openButton"
            android:text="@string/openButtonText"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="#282A40"
            android:textColor="#DCE5F2"/>

    </LinearLayout>

</android.support.v7.widget.CardView>