<?xml version="1.0" encoding="utf-8"?>
<!-- This Layout XML file is used for the layout of a list item in the DataSetRecycler -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:backgroundTint="#DCE5F2"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            android:contentDescription="@string/imgView6Desc"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fileText"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:maxLines="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/openButton"
            android:text="@string/openButtonText"
            android:layout_margin="4dp"
            android:backgroundTint="#282A40"
            android:textColor="#DCE5F2"/>

    </LinearLayout>

</android.support.v7.widget.CardView>