<?xml version="1.0" encoding="utf-8"?>
<!-- This Layout XML file is used for the layout of a list item in the ExampleRecycler -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:backgroundTint="#DCE5F2"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/textView_num"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:singleLine="true"
            android:hint="@string/answerText"
            android:inputType="text"
            android:maxLines="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/cordButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_view_24px"
            android:padding="2dp"
            android:contentDescription="@string/cordButtonDesc"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:id="@+id/delButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_delete_24px"
            android:padding="2dp"
            android:contentDescription="@string/deleteButtonText"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</android.support.v7.widget.CardView>